--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             margin-bottom: 20px; /* Increased space between buttons */
             box-shadow: 0 10px 20px rgba(0,0,0,0.2), 0 0 8px rgba(0,0,0,0.1); /* Increased shadow */
             text-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Text shadow */
+            text-decoration: none; /* Remove underline from links */
+            display: inline-block; /* Allow padding and other button styles */
         }
         .button-box:hover {
             background-color: #e0e0e0; /* Darker background on hover */
@@ -76,7 +78,7 @@
 
         <!-- Button containers -->
         <div class="button-container">
-            <button class="button-box">music reviews</button>
+            <a href="music.html" class="button-box">music reviews</a>
             <button class="button-box">collections (not)</button>
             <button class="button-box">where 2 find me</button>
             <button class="button-box">my clothing brand</button>
