--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <button class="button-box">collections (not)</button>
             <button class="button-box">where 2 find me</button>
             <button class="button-box">my clothing brand</button>
-            <button class="button-box">random cat image</button>
+            <a href="cat.html" class="button-box">random cat image</a>
         </div>
     </div>
 </body>
